ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kyc
        pathType: Prefix
        backend:
          service:
            name: kyc-service
            port:
              number: 80
      - path: /portfolio
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
